Reduce confusing spacing below StreamField blocks help text. Fix #11888 (#11934)

--- a/client/src/components/StreamField/StreamField.scss
+++ b/client/src/components/StreamField/StreamField.scss
@@ -15,5 +15,5 @@
 .c-sf-help .help {
   // StreamField block help text is above the blocks rather than below.
   margin-top: 0;
-  margin-bottom: theme('spacing.6');
+  margin-bottom: theme('spacing.4');
 }
